syntax = "proto3";
package proto;


option go_package = ".;proto";

service DPAuthService{
  rpc GetConnectionToken( GetConnectionTokenRequest ) returns ( GetConnectionTokenResponse );
  rpc GetWorkspaceToken( GetWorkspaceTokenRequest ) returns ( GetWorkspaceTokenResponse );
}

message GetConnectionTokenRequest {
}

message GetWorkspaceTokenRequest {
}

message GetConnectionTokenResponse {
  string connectionToken = 1;
  string service = 2;
  string instanceID = 3;
}

message GetWorkspaceTokenResponse {
  string workspaceToken = 1;
  string service = 2;
  string instanceID = 3;
}