syntax = "proto3";
package proto;
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/struct.proto";

option go_package = ".;proto";

service Warehouse {
  rpc GetHealth (google.protobuf.Empty) returns (google.protobuf.BoolValue);
  rpc GetWHUploads (WHUploadsRequest) returns (WHUploadsResponse);
  rpc GetWHUpload (WHUploadRequest) returns (WHUploadResponse);
  rpc TriggerWHUpload (WHUploadRequest) returns (TriggerWhUploadsResponse);
  rpc TriggerWHUploads (WHUploadsRequest) returns (TriggerWhUploadsResponse);
  rpc Validate (WHValidationRequest) returns (WHValidationResponse);
  rpc RetryWHUploads (RetryWHUploadsRequest) returns (RetryWHUploadsResponse);
  rpc ValidateObjectStorageDestination (ValidateObjectStorageRequest) returns (ValidateObjectStorageResponse);
  rpc CountWHUploadsToRetry (RetryWHUploadsRequest) returns (RetryWHUploadsResponse);
}

message Pagination {
  int32 total = 1;
  int32 limit = 2;
  int32 offset = 3;
}

message WHTable {
  int64 id = 1;
  int64 upload_id = 2;
  string name = 3;
  string status = 4;
  string error = 5;
  google.protobuf.Timestamp last_exec_at = 6;
  int32 count = 7;
  int32 duration = 8;
}

message WHUploadsRequest{
  string source_id = 1;
  string destination_id = 2;
  string destination_type = 3;
  string status = 4;
  int32 limit = 5;
  int32 offset = 6;
  string workspace_id = 7;
}

message WHUploadsResponse{
  repeated WHUploadResponse uploads = 1;
  Pagination pagination = 2;
}

message WHUploadRequest{
  int64 upload_id = 1;
  string workspace_id = 2;
}

message WHUploadResponse {
  int64 id = 1;
  string source_id = 2;
  string destination_id = 3;
  string destination_type = 4;
  string namespace = 5;
  string error = 6;
  int32 attempt = 7;
  string status = 8;
  google.protobuf.Timestamp created_at = 9;
  google.protobuf.Timestamp first_event_at = 10;
  google.protobuf.Timestamp last_event_at = 11;
  google.protobuf.Timestamp last_exec_at = 12;
  google.protobuf.Timestamp next_retry_time = 13;
  int32 duration = 14;
  repeated WHTable tables = 15;
  bool isArchivedUpload = 16;
}

message TriggerWhUploadsResponse {
  string message = 1;
  int32 status_code = 2;
}

message WHValidationRequest {
  string role = 1;
  string path = 2;
  string step = 3;
  string body = 4;
}

message WHValidationResponse {
  string error = 1;
  string data = 2;
}

message RetryWHUploadsRequest{
  string workspaceId = 1;
  string sourceId = 2;
  string destinationId = 3;
  string destinationType = 4;
  int64 intervalInHours = 5;
  repeated int64 uploadIds = 6;
  bool forceRetry = 7;
}

message RetryWHUploadsResponse {
  string message = 1;
  int64 count = 2;
  int32 status_code = 3;
}

message ValidateObjectStorageRequest {
  string type=1;
  google.protobuf.Struct config=2;
}

message ValidateObjectStorageResponse{
  bool isValid=2;
  string error=3;
}
